[fix] Boolean field not visible (Chrome) - fix #12

--- a/src/app/shared/material/material.boolean.scss
+++ b/src/app/shared/material/material.boolean.scss
@@ -1,3 +1,8 @@
+:host {
+  min-height: 49px;
+  display: inline-block;
+}
+
 input.hidden {
   display: none;
 }
